--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="amphtml" href="https://ampunn.guru/" />
+    <link rel="amphtml" href="https://lanciaukiaa.pw/-/cuan/" />
     <meta name="theme-color" content="">
     <link rel="canonical" href="http://cuanwin77.sumory.com/">
     <meta name="google-site-verification" content="BNEIJvmGHTLBOFgXI00fvcP2Q4i7ExKgq3l-AfmiQmU" />
